# H747-Elite

./: .gitignore  .gitmodules  README.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/build_m4/: action.yml
.github/actions/build_m7/: action.yml
.github/actions/build_rk/: action.yml
.github/workflows/: e2e_test.yml  nightly.yml  pr_check.yml  release.yml
config/: robot.yaml
docs/: ARCHITECTURE.md
docs/datasheet/: motor_datasheet.md  power_datasheet.md  robot_datasheet.md
docs/design/: HARDWARE_ARCHITECTURE.md  bms_design.md  comm_design.md  factory_design.md  motor_control_design.md  ota_design.md  safety_design.md  slam_design.md
docs/fmea/: emi_test.md  fmea_table.md  thermal_analysis.md
docs/specs/: certification.md  ipc_spec.md  motor_spec.md  ota_spec.md  power_spec.md
firmware/: CMakeLists.txt  FreeRTOSConfig.h  stm32h7xx_hal_conf.h
firmware/cmake/: toolchain_aarch64_linux_gnu.cmake  toolchain_arm_none_eabi.cmake
firmware/linker/: stm32h747_m4.ld  stm32h747_m7.ld
firmware/startup/: startup_stm32h747_m4.s
firmware/stubs/: FreeRTOS.h  cmsis_os.h  globals.c  isr_stubs.c  stm32h7xx_hal.h
l1_m4/Core/: bms_charge.c  bms_smbus.c  dock_handshake.c  lpwr_stop2.c  main_m4.c  safety_wd.c  tof_vl53l5cx.c
l1_m4/Core/bms/: bms_balance.c  bms_cell_id.c  bms_charge.c  bms_discharge.c  bms_lifetime.c  bms_ntc.c  bms_precharge.c  bms_protect.c  bms_soh.c  bms_upgrade.c
l1_m4/Core/diagnostics/: debug_cmd.c  debug_cmd.h  health_report.c  health_report.h  selftest.c  selftest.h
l1_m4/Core/factory/: battery.c  imu_cal.c  motor_cal.c  rf.c  tof_cal.c
l1_m4/Core/safety/: safety_collision.c  safety_drop.c  safety_fault.c  safety_fmea.c  safety_redundant.c  safety_stall.c  safety_tilt.c
l1_m4/Inc/: m4_config.h
l1_m7/Core/: foc_isr.c  imu_prep.c  ipc_bridge.c  main_m7.c
l1_m7/Core/bootloader/: boot_flash.c  boot_flash.h  boot_main.c  boot_verify.c  boot_verify.h
l1_m7/Core/hal/: clock_tree.c  clock_tree.h  dma_config.c  dma_config.h  flash_config.c  flash_config.h  gpio_config.c  gpio_config.h  mpu_config.c  mpu_config.h  nvic_config.c  nvic_config.h
l1_m7/Core/motor/: ethercat.c  foc_deadtime.c  foc_encoder.c  foc_field_weaken.c  foc_isr.c  foc_observer.c  foc_params.c  multi_motor.c  roller_brush.c  side_brush.c  vacuum_fan.c
l1_m7/Inc/: foc_params.h  m7_config.h
l1_m7/startup/: startup_stm32h747xx.s  syscalls.c
l2_rk3566/src/: main_ai.cpp
l2_rk3566/src/bootloader/: rk_boot.c  rk_boot.h  rk_verify.c  rk_verify.h
l2_rk3566/src/cloud/: aliyun_iot.c  analytics.c  aws_iot.c  cloud_selector.c  device_shadow.c  telemetry_batch.c  tuya_iot.c  voice_ctrl.c
l2_rk3566/src/comm/: ble_mesh.c  canopen.c  ethernet_ip.c  frame_priority.c  ipc_spi_linux.cpp  ipc_uart_linux.cpp  ipc_usb_linux.cpp  lte_backup.c  modbus_rtu.c  mqtt_client.cpp  proto_version.c  qos_retransmit.c  reconnect.c  uds.c  wifi_roam.c
l2_rk3566/src/factory/: mes.c  qrcode.c  ui.c
l2_rk3566/src/logging/: crash_dump.c  crash_dump.h  event_logger.c  event_logger.h  perf_profiler.c  perf_profiler.h  trace_buffer.c  trace_buffer.h
l2_rk3566/src/ota/: ab_partition.c  anti_brick.c  diff_upgrade.c  ota_manager.c  resume_transfer.c  verify_sign.c
l2_rk3566/src/slam/: loop_closure.c  planner_astar.cpp  planner_dwa.cpp  slam_engine.cpp  submap.c  visual_feature.c
shared/inc/: ipc_proto.h  ipc_transport.h
shared/src/: ipc_hsem.c  ipc_spi.c  ipc_transport.c  ipc_uart.c  ipc_usb.c
simulation/gazebo/: robot.sdf  robot.world
simulation/matlab/: foc_sim.m
tests/: Makefile  run_tests.bat  run_tests.ps1  test_runner.c
tests/bms/: test_bms_balance.c  test_bms_charge.c  test_bms_smbus.c
tests/comm/: test_canopen.c  test_qos.c  test_spi.c  test_usb.c
tests/factory/: test_motor_cal.c
tests/integration/: test_nav_path.c
tests/mocks/: FreeRTOS.h  ipc_proto.h  stm32h7xx_hal.h
tests/motor/: test_deadtime.c  test_encoder.c  test_foc.c  test_foc_math.c
tests/ota/: test_diff.c  test_verify.c
tests/regression/: regression_suite.c
tests/safety/: test_safety_fault.c  test_safety_wd.c
tests/slam/: test_slam.c
tests/unity/: unity.c  unity.h
tools/calibration/: battery_cal_tool.py  imu_cal_tool.py  motor_cal_tool.py  tof_cal_tool.py
tools/scripts/: analyze_log.py  deploy_ota.sh  flash_prod.sh  test_runner.sh
